--- a/Atividade Portfólio/HTML/Portfólio.html
+++ b/Atividade Portfólio/HTML/Portfólio.html
@@ -4,31 +4,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/Portfólio.css" type="text/css">
+    <link rel="stylesheet" href="../CSS/Portfólio.css" type="text/css"> 
     <title>Meu Portfólio</title>
 </head>
 
 <body>
-
-
-    <section>
-        <header>
-            <nav class="nav1">
-                <a class="an1" href="#">Sobre</a>
-
-
-                <a class="an2" href="#">Meus Contatos</a>
+    <header>
+        <div class="headerRight">
+            <nav>
+                <a href="#">Home</a>
+                <a href="#sobre">Sobre</a>
+                <a href="#projetos">Projetos</a>
+                <a href="#contatos">Contatos</a>
             </nav>
+            <a class="theme">
+
+            </a>
+        </div>
+    </header>
+
+
+    <main>
+
+        <div class="eu1">
+            <h1 class="logo">Olá, eu sou <span>Gabriel Campos</span></h1>
+            <p class="estudo">Estudante na área de front-end</p>
+        </div>
+
+
+        <div>
+            <h1>Sobre mim</h1>
+            <p>Meu nome completo é Gariel Campos Mascarenhas Nascimento, e estou cursando desenvolvimento web na área de
+                front-end no Instituto da Oportunidade Social (IOS)</p>
+        </div>
+
+
+        <div>
+
+            <h1>Meus projetos</h1>
+            <p>Reposítorio do conteúdo do curso (IOS)</p>
+            <p>GitHub </p>
+
+        </div>
+
+        <div>
+
+            <h1>Meus contatos</h1>
+
+
+            <h4>GitHub</h4>
+            <a href="#">GabrielCMN444</a>
+
+            <h4>WhatsApp</h4>
+            <a href="#">+55 11 91479-5570</a>
+
+            <h4>Instagram</h4>
+            <a href="#">gabrielcampos4444</a>
+
+
+            <h4>Meu E-mail</h4>
+            <a href="#">gab.campos08.44@gmail.com</a>
+
+        </div>
 
 
 
+    </main>
 
 
-        </header>
-    </section>
+    <footer class="rodape1">
+        <div class="a2">
+            <p> <small>Copyrigth<sup>&copy;</sup> 2023 Gabriel Campos. Todos os direitos reservados.</small></p>
 
 
+    </footer>
 
+
+    <script></script>
 </body>
 
 </html>
