--- a/Atividade Portfólio/HTML/Portfólio.html
+++ b/Atividade Portfólio/HTML/Portfólio.html
@@ -10,10 +10,10 @@
 
 <body>
 
-    <header>
+    <header id="head1">
         <nav>
             <p class="padg1"><img src="../IMAGE/logotipo-do-google-glass.png" class="googleimg1" />abriel C.</p>
-            <div class="nav">
+            <div class="nav-menu">
                 <a href="#" style="color:black; text-decoration: none;">Home</a>
                 <a href="#sobre" style="color: black; text-decoration: none;">Sobre</a>
                 <a href="#projetos" style="color: black; text-decoration: none;">Projetos</a>
@@ -28,7 +28,7 @@
 
     <main>
 
-        <article>
+        <article class="test1">
             <div class="eu1">
 
                 <h1 class="logo2">Olá, Me chamo <br> <span class="span1">Gabriel Campos</span></h1>
@@ -37,15 +37,15 @@
                     Social
                     (IOS)
                 </p>
-                <img class="guitarraimg1" src="../IMAGE/guitar.png">
             </div>
+            <img class="guitarraimg1" src="../IMAGE/guitar.png">
         </article>
 
         <br><br><br><br>
 
         <div class="borda1"></div>
 
-        <article class="sobre1">
+        <article class="test1">
             <div>
                 <h1>Sobre <span class="span2">mim</span></h1>
                 <p class="sobrepar">
