--- a/Atividade Portfólio/HTML/Portfólio.html
+++ b/Atividade Portfólio/HTML/Portfólio.html
@@ -111,7 +111,7 @@
     </main>
     <br><br><br><br>
 
-    <div class="borda4"></div>
+    <!-- <div class="borda4"></div> -->
 
     <footer class="rodape1">
         <div class="a2">
