--- a/Atividade Portfólio/HTML/Portfólio.html
+++ b/Atividade Portfólio/HTML/Portfólio.html
@@ -19,7 +19,8 @@
                 <a href="#projetos" style="color: black; text-decoration: none;">Projetos</a>
                 <a href="#contatos" style="color: black; text-decoration: none; ">Contatos</a>
             </div>
-            <a target="_blank" href="https://github.com/GabrielCMN444"><img src="../IMAGE/github.png" class="gitimg"></a>
+            <a target="_blank" href="https://github.com/GabrielCMN444"><img src="../IMAGE/github.png"
+                    class="gitimg"></a>
         </nav>
 
 
@@ -29,7 +30,8 @@
     <main>
 
         <article class="test1">
-            <div class="eu1">
+
+            <div>
 
                 <h1 class="logo2">Olá, Me chamo <br> <span class="span1">Gabriel Campos</span></h1>
                 <p class="estudo">Atualmente sou estudante<br> de desenvolvimento web<br> no Instituto da
@@ -38,6 +40,8 @@
                     (IOS)
                 </p>
             </div>
+
+
             <img class="guitarraimg1" src="../IMAGE/guitar.png">
         </article>
 
@@ -45,16 +49,17 @@
 
         <div class="borda1"></div>
 
-        <article class="test1">
-            <div>
-                <h1>Sobre <span class="span2">mim</span></h1>
+        <article class="sobre1">
+
+            <div class="sobrep1">
+
+                <h1 class="sobremim1">Sobre <span class="span2">mim</span></h1>
+
                 <p class="sobrepar">
                     Meu nome completo é Gabriel Campos Mascarenhas Nascimento,<br> e estou cursando
                     desenvolvimento web na área de front-end no<br> Instituto da Oportunidade Social (IOS). Estudando
                     linguagens de<br> programação como:
                 </p>
-                <img src="../IMAGE/programacao.png">
-
 
                 <ul class="ul1" class="ul1">
 
@@ -64,8 +69,25 @@
                     <br>
                     <li>JavaScript<img src="../IMAGE/script-java.png" class="imgjs1"></li>
                 </ul>
+
+            </div>
+
+            <img src="../IMAGE/programacao.png">
+
+
+
+          
+
+
+
             </div>
         </article>
+
+
+
+
+
+
 
         <br><br><br><br>
 
